[package]
name = "cargo-audit-build"
version = "0.3.1"
edition = "2024"
description = "Audit cargo build.rs files"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
home = "0.5"
log = "0.4.28"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
